Bug 357638 - Plasma 5.5.3 crash when right clicking the Application Launcher
Summary: Plasma 5.5.3 crash when right clicking the Application Launcher
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: 5.5.3
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2016-01-07 01:27 UTC by Till Schäfer
Modified: 2016-01-09 00:57 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Till Schäfer 2016-01-07 01:27:00 UTC
Application: plasmashell (5.5.3)
 (Compiled from sources)
Qt Version: 5.5.1
Operating System: Linux 4.1.12-gentoo x86_64
Distribution: "Gentoo Base System release 2.2"

-- Information about the crash:
- What I was doing when the application crashed:
Whenever i right click an entry in the Application Launcher (e.g. systemsetting to add in to the favorites) plasma crashes.

-- Backtrace:
Application: Plasma (plasmashell), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7ff75e3107c0 (LWP 4329))]

Thread 7 (Thread 0x7ff74a366700 (LWP 4334)):
#0  0x00007ff758b1312d in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007ff75cad6ac2 in poll (__timeout=-1, __nfds=1, __fds=0x7ff74a365d00) at /usr/include/bits/poll2.h:46
#2  _xcb_conn_wait (c=c@entry=0x1632e60, cond=cond@entry=0x1632ea0, vector=vector@entry=0x0, count=count@entry=0x0) at /var/tmp/portage/x11-libs/libxcb-1.11.1/work/libxcb-1.11.1/src/xcb_conn.c:459
#3  0x00007ff75cad872f in xcb_wait_for_event (c=0x1632e60) at /var/tmp/portage/x11-libs/libxcb-1.11.1/work/libxcb-1.11.1/src/xcb_in.c:693
#4  0x00007ff74b86dcb9 in QXcbEventReader::run (this=0x1632630) at qxcbconnection.cpp:1229
#5  0x00007ff75917ded2 in QThreadPrivate::start (arg=0x1632630) at thread/qthread_unix.cpp:331
#6  0x00007ff758317324 in start_thread (arg=0x7ff74a366700) at pthread_create.c:333
#7  0x00007ff758b1becd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 6 (Thread 0x7ff7431d1700 (LWP 4517)):
#0  0x00007ff754bc6481 in g_main_context_check (context=context@entry=0x7ff73c000990, max_priority=2147483647, fds=fds@entry=0x7ff73c003070, n_fds=n_fds@entry=1) at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/glib/gmain.c:3631
#1  0x00007ff754bc6ae0 in g_main_context_iterate (context=context@entry=0x7ff73c000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/glib/gmain.c:3805
#2  0x00007ff754bc6c4c in g_main_context_iteration (context=0x7ff73c000990, may_block=1) at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/glib/gmain.c:3869
#3  0x00007ff759375c2c in QEventDispatcherGlib::processEvents (this=0x7ff73c0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:418
#4  0x00007ff7593277da in QEventLoop::exec (this=this@entry=0x7ff7431d0de0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#5  0x00007ff759179524 in QThread::exec (this=this@entry=0x1709a40) at thread/qthread.cpp:503
#6  0x00007ff75b97d585 in QQmlThreadPrivate::run (this=0x1709a40) at qml/ftw/qqmlthread.cpp:141
#7  0x00007ff75917ded2 in QThreadPrivate::start (arg=0x1709a40) at thread/qthread_unix.cpp:331
#8  0x00007ff758317324 in start_thread (arg=0x7ff7431d1700) at pthread_create.c:333
#9  0x00007ff758b1becd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 5 (Thread 0x7ff739b71700 (LWP 4562)):
#0  g_mutex_unlock (mutex=0x7ff734000990) at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/glib/gthread-posix.c:1348
#1  0x00007ff754bc6070 in g_main_context_prepare (context=context@entry=0x7ff734000990, priority=priority@entry=0x7ff739b70cb0) at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/glib/gmain.c:3408
#2  0x00007ff754bc6a68 in g_main_context_iterate (context=context@entry=0x7ff734000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/glib/gmain.c:3788
#3  0x00007ff754bc6c4c in g_main_context_iteration (context=0x7ff734000990, may_block=1) at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/glib/gmain.c:3869
#4  0x00007ff759375c2c in QEventDispatcherGlib::processEvents (this=0x7ff7340008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:418
#5  0x00007ff7593277da in QEventLoop::exec (this=this@entry=0x7ff739b70de0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#6  0x00007ff759179524 in QThread::exec (this=this@entry=0x19d8440) at thread/qthread.cpp:503
#7  0x00007ff75b97d585 in QQmlThreadPrivate::run (this=0x19d8440) at qml/ftw/qqmlthread.cpp:141
#8  0x00007ff75917ded2 in QThreadPrivate::start (arg=0x19d8440) at thread/qthread_unix.cpp:331
#9  0x00007ff758317324 in start_thread (arg=0x7ff739b71700) at pthread_create.c:333
#10 0x00007ff758b1becd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 4 (Thread 0x7ff733fff700 (LWP 4563)):
#0  0x00007ff758b1312d in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007ff754bc6b3c in g_main_context_poll (priority=2147483647, n_fds=1, fds=0x7ff72c002c70, timeout=-1, context=0x7ff72c000990) at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/glib/gmain.c:4103
#2  g_main_context_iterate (context=context@entry=0x7ff72c000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/glib/gmain.c:3803
#3  0x00007ff754bc6c4c in g_main_context_iteration (context=0x7ff72c000990, may_block=1) at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/glib/gmain.c:3869
#4  0x00007ff759375c2c in QEventDispatcherGlib::processEvents (this=0x7ff72c0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:418
#5  0x00007ff7593277da in QEventLoop::exec (this=this@entry=0x7ff733ffede0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#6  0x00007ff759179524 in QThread::exec (this=this@entry=0x1ad7d90) at thread/qthread.cpp:503
#7  0x00007ff75b97d585 in QQmlThreadPrivate::run (this=0x1ad7d90) at qml/ftw/qqmlthread.cpp:141
#8  0x00007ff75917ded2 in QThreadPrivate::start (arg=0x1ad7d90) at thread/qthread_unix.cpp:331
#9  0x00007ff758317324 in start_thread (arg=0x7ff733fff700) at pthread_create.c:333
#10 0x00007ff758b1becd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 3 (Thread 0x7ff7329c1700 (LWP 4680)):
#0  pthread_cond_wait () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007ff75dd66724 in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0x7ff75de57140 <QTWTF::pageheap_memory>) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2359
#2  0x00007ff75dd66769 in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=<optimized out>) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1464
#3  0x00007ff758317324 in start_thread (arg=0x7ff7329c1700) at pthread_create.c:333
#4  0x00007ff758b1becd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7ff6ab210700 (LWP 4833)):
#0  0x00007ff758b0f16d in read () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007ff754c09c90 in read (__nbytes=16, __buf=0x7ff6ab20fb90, __fd=<optimized out>) at /usr/include/bits/unistd.h:44
#2  g_wakeup_acknowledge (wakeup=0x7ff72c002380) at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/glib/gwakeup.c:210
#3  0x00007ff754bc65ec in g_main_context_check (context=context@entry=0x7ff6a4000990, max_priority=2147483647, fds=fds@entry=0x7ff6a4003120, n_fds=n_fds@entry=1) at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/glib/gmain.c:3600
#4  0x00007ff754bc6ae0 in g_main_context_iterate (context=context@entry=0x7ff6a4000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/glib/gmain.c:3805
#5  0x00007ff754bc6c4c in g_main_context_iteration (context=0x7ff6a4000990, may_block=1) at /var/tmp/portage/dev-libs/glib-2.44.1-r1/work/glib-2.44.1/glib/gmain.c:3869
#6  0x00007ff759375c2c in QEventDispatcherGlib::processEvents (this=0x7ff6a40008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:418
#7  0x00007ff7593277da in QEventLoop::exec (this=this@entry=0x7ff6ab20fd90, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#8  0x00007ff759179524 in QThread::exec (this=this@entry=0x1f75210) at thread/qthread.cpp:503
#9  0x00007ff75c318be6 in QQuickPixmapReader::run (this=0x1f75210) at util/qquickpixmapcache.cpp:760
#10 0x00007ff75917ded2 in QThreadPrivate::start (arg=0x1f75210) at thread/qthread_unix.cpp:331
#11 0x00007ff758317324 in start_thread (arg=0x7ff6ab210700) at pthread_create.c:333
#12 0x00007ff758b1becd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7ff75e3107c0 (LWP 4329)):
[KCrash Handler]
#6  QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::data (this=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qscopedpointer.h:135
#7  qGetPtrHelper<QScopedPointer<QObjectData> > (p=...) at ../../include/QtCore/../../src/corelib/global/qglobal.h:983
#8  QObject::d_func (this=<optimized out>) at kernel/qobject.h:110
#9  QObject::property (this=this@entry=0x0, name=name@entry=0x7ff6a9ab82eb "configuration") at kernel/qobject.cpp:3875
#10 0x00007ff6a9a8e811 in AppEntry::actions (this=0x493bb20) at /var/tmp/portage/kde-plasma/plasma-desktop-5.5.3/work/plasma-desktop-5.5.3/applets/kicker/plugin/appentry.cpp:188
#11 0x00007ff6a9a995fe in FavoritesModel::data (this=<optimized out>, index=..., role=<optimized out>) at /var/tmp/portage/kde-plasma/plasma-desktop-5.5.3/work/plasma-desktop-5.5.3/applets/kicker/plugin/favoritesmodel.cpp:81
#12 0x00007ff6a9a9604e in QModelIndex::data (arole=265, this=0x7fffa6504a10) at /usr/include/qt5/QtCore/qabstractitemmodel.h:420
#13 ComputerModel::data (this=0x4829ec0, index=..., role=265) at /var/tmp/portage/kde-plasma/plasma-desktop-5.5.3/work/plasma-desktop-5.5.3/applets/kicker/plugin/computermodel.cpp:231
#14 0x00007ff75b737f2c in QModelIndex::data (arole=265, this=0x7fffa6504ad0) at /usr/include/qt5/QtCore/qabstractitemmodel.h:420
#15 QQmlDMAbstractItemModelData::value (role=265, this=0x539e840) at util/qqmladaptormodel.cpp:412
#16 QQmlDMCachedModelData::metaCall (this=0x539e840, call=<optimized out>, id=<optimized out>, arguments=0x7fffa6504b40) at util/qqmladaptormodel.cpp:284
#17 0x00007ff75b8b1ef5 in ReadAccessor::Indirect (property=..., n=0x0, output=0x7fffa6504b70, object=0x539e840) at jsruntime/qv4qobjectwrapper.cpp:118
#18 LoadProperty<ReadAccessor::Indirect> (v4=0x1aed750, object=object@entry=0x539e840, property=..., notifier=0x0) at jsruntime/qv4qobjectwrapper.cpp:195
#19 0x00007ff75b8b28e5 in QV4::QObjectWrapper::getProperty (object=0x539e840, ctx=0x7ff7330002a0, property=0x5325d28, captureRequired=captureRequired@entry=true) at jsruntime/qv4qobjectwrapper.cpp:387
#20 0x00007ff75b8b3536 in QV4::QObjectWrapper::getQmlProperty (this=0x7ff733000290, qmlContext=0x531d8b0, n=<optimized out>, revisionMode=QV4::QObjectWrapper::IgnoreRevision, hasProperty=0x0, includeImports=<optimized out>) at jsruntime/qv4qobjectwrapper.cpp:321
#21 0x00007ff75b8c90d6 in QV4::Object::get (hasProperty=0x0, name=<optimized out>, this=0x7ff733000290) at jsruntime/qv4object_p.h:279
#22 QV4::Runtime::getProperty (engine=0x1aed750, object=..., nameIndex=<optimized out>) at jsruntime/qv4runtime.cpp:675
#23 0x00007ff73002e466 in ?? ()
#24 0x00007fffa6504e50 in ?? ()
#25 0x00007ff7330001a8 in ?? ()
#26 0x0000000000000000 in ?? ()

Reported using DrKonqi
Comment 1 Eike Hein 2016-01-08 21:20:29 UTC
The backtrace is quite clear, but I'm not sure how that situation arises. Do you use your Application Menu in some unusual way like on the desktop? Can you say whether the entry is is in a regular category subdialog, or somewhere more specific in the menu?
Comment 2 Till Schäfer 2016-01-08 22:12:08 UTC
i used the default kickoff from the task bar. I browsed the category "computer" and then right clicked on the systemsettings symbol.
Comment 3 Eike Hein 2016-01-08 22:16:53 UTC
Move to correct product.
Comment 4 Eike Hein 2016-01-09 00:57:31 UTC
Git commit 12a64ed82308b9a368d42f641fb23da8b18c3000 by Eike Hein.
Committed on 09/01/2016 at 00:57.
Pushed by hein into branch 'Plasma/5.5'.

Add missing appletInterface prop.

M  +15   -0    applets/kicker/plugin/computermodel.cpp
M  +6    -0    applets/kicker/plugin/computermodel.h
M  +2    -0    applets/kickoff/package/contents/ui/ComputerView.qml

http://commits.kde.org/plasma-desktop/12a64ed82308b9a368d42f641fb23da8b18c3000