Add missing appletInterface prop.

BUG:357638